--- a/UserService/pom.xml
+++ b/UserService/pom.xml
@@ -68,6 +68,13 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
+
+        <!-- implementing FeignClient -->
+        <dependency>
+          <groupId>org.springframework.cloud</groupId>
+          <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+        
     </dependencies>
 
     <dependencyManagement>
