--- a/Hotel/src/main/resources/application.yml
+++ b/Hotel/src/main/resources/application.yml
@@ -2,6 +2,9 @@ server:
   port: 8082
 
 spring:
+  application:
+    name: HOTELSERVICE
+
   datasource:
     url: jdbc:mysql://localhost:3306/microservicesH
     username: root
@@ -16,7 +19,6 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
 
-# configuration for eureka server
 eureka:
   instance:
     prefer-ip-address: true
@@ -24,4 +26,4 @@ eureka:
     fetch-registry: true
     register-with-eureka: true
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: "http://localhost:8761/eureka"
