--- a/RatingService/src/main/resources/application.yml
+++ b/RatingService/src/main/resources/application.yml
@@ -2,6 +2,8 @@ server:
   port: 8083
 
 spring:
+  application:
+    name: RATINGSERVICE
   datasource:
     url: jdbc:mysql://localhost:3306/microservicesR
     username: root
