--- a/Hotel/pom.xml
+++ b/Hotel/pom.xml
@@ -63,6 +63,12 @@
           <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
 
+		<!-- configuration starter -->
+	    <dependency>
+	      <groupId>org.springframework.cloud</groupId>
+           <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
+
 	</dependencies>
 
 	<!-- dependency management for eureka client -->
