--- a/RatingService/pom.xml
+++ b/RatingService/pom.xml
@@ -62,7 +62,14 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
+	<!-- configuration starter -->
+	    <dependency>
+	      <groupId>org.springframework.cloud</groupId>
+           <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
 	</dependencies>
+
+
 
 	<!-- dependency management for client -->
 	<dependencyManagement>
