--- a/UserService/pom.xml
+++ b/UserService/pom.xml
@@ -74,6 +74,12 @@
           <groupId>org.springframework.cloud</groupId>
           <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
+
+        <!-- config server -->
+        <dependency>
+           <groupId>org.springframework.cloud</groupId>
+           <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
         
     </dependencies>
 
